# cs50-ci-action

./: .env.sample  .gitignore  Dockerfile  README.md  action.yml  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
src/: main.py  settings.py
src/github/: auth.py  cloner.py  commenter.py
src/models/: result.py
src/testing/: problem.py
src/utils/: ansi.py  markdown.py
tests/: test_settings.py
tests/github/: test_cloner.py
