[project]
name = "cs50-ci-action"
version = "0.1.0"
description = "Testing pipeline for CS50 problem sets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "check50>=3.4.0",
    "cryptography>=49.0.0",
    "dotenv>=0.9.9",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = ["pytest>=9.1.0", "pytest-cov>=7.1.0", "ruff>=0.12.10"]

[tool.ruff]
line-length = 100
target-version = "py312"
preview = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "C90",   # mccabe
    "I",     # isort
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "EM",    # flake8-errmsg
    "ICN",   # flake8-import-conventions
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "SIM",   # flake8-simplify
    "TCH",   # flake8-typechecking
    "PTH",   # flake8-use-pathlib
    "UP",    # pyupgrade
    "RUF",   # ruff-specific
    "TRY",   # tryceratops
    "FURB",  # refurb
]
ignore = ["COM812"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov-report=term", "--cov=."]
pythonpath = "src"
